# okami-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  aabb.hpp  aabb_tree.hpp  animation.cpp  animation.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controllers.hpp  common.cpp  common.hpp  config.cpp  config.hpp  content.hpp  editor.cpp  editor.hpp  engine.cpp  engine.hpp  entity_manager.cpp  entity_manager.hpp  entity_tree_view.cpp  entity_tree_view.hpp  geometry.cpp  geometry.hpp  glfw_module.cpp  glfw_module.hpp  gltf_scene.cpp  gltf_scene.hpp  im3d.cpp  im3d.hpp  imgui.cpp  imgui.hpp  input.hpp  io.cpp  io.hpp  jobs.cpp  jobs.hpp  (+24 more)
assets/: test.glb
bgfx/: bgfx_renderer.cpp  bgfx_renderer.hpp  bgfx_sprite.cpp  bgfx_sprite.hpp  bgfx_texture_manager.cpp  bgfx_texture_manager.hpp  bgfx_triangle.cpp  bgfx_triangle.hpp  bgfx_util.cpp  bgfx_util.hpp  metal_headless.mm
bgfx/shaders/: sprite_fs.sc  sprite_vs.sc  triangle_fs.sc  triangle_vs.sc  varying.def.sc
d3d12/shaders/: common.fxh  cpp.fxh  sprite.fxh  sprite.hlsl  static_mesh.hlsl  triangle.hlsl
glfw/: glfw_module.cpp  glfw_module.hpp
ogl/: ogl_brdf.cpp  ogl_brdf.hpp  ogl_debug.cpp  ogl_debug.hpp  ogl_depth_pass.cpp  ogl_depth_pass.hpp  ogl_geometry.cpp  ogl_geometry.hpp  ogl_headless.cpp  ogl_headless.hpp  ogl_im3d.cpp  ogl_im3d.hpp  ogl_imgui.cpp  ogl_imgui.hpp  ogl_material.cpp  ogl_material.hpp  ogl_renderer.cpp  ogl_renderer.hpp  ogl_scene.cpp  ogl_scene.hpp  ogl_skinned_mesh.cpp  ogl_skinned_mesh.hpp  ogl_sky.cpp  ogl_sky.hpp  ogl_sprite.cpp  ogl_sprite.hpp  ogl_static_mesh.cpp  ogl_static_mesh.hpp  ogl_texture.cpp  ogl_texture.hpp  ogl_triangle.cpp  ogl_triangle.hpp  ogl_utils.cpp  ogl_utils.hpp
ogl/glad/: gl.h
ogl/shaders/: basic_textured.fs  blit.vs  brdf.glsl  color.glsl  common.glsl  constants.glsl  cook_torrence_brdf_lut.fs  debug.glsl  im3d.glsl  im3d.glsl.yaml  im3d.vs  lambert.fs  lights.glsl  material_basic_textured.fs  material_default.fs  normal.glsl  scene.glsl  shadow.glsl  skinned_mesh.glsl  skinned_mesh.vs  skinned_mesh_depth.vs  sky.vs  sky_atmosphere.fs  sky_default.fs  sprite.fs  sprite.glsl  sprite.gs  sprite.vs  static_mesh.fs  static_mesh.glsl  static_mesh.vs  static_mesh_depth.fs  static_mesh_depth.gs  static_mesh_depth.vs  stochastic_transparency.glsl  tonemapping.glsl  transparency.glsl  triangle.fs  triangle.vs  types.glsl  (+1 more)
physics/: physics2d.cpp  physics2d.hpp
samples/: CMakeLists.txt  sample.cpp  sample.hpp
samples/01_hello_world/: CMakeLists.txt  main.cpp  scene.hpp
samples/02_zoo/: CMakeLists.txt  main.cpp  scene.hpp
samples/03_materials/: CMakeLists.txt  main.cpp  scene.hpp
samples/04_sponza/: CMakeLists.txt  main.cpp  scene.hpp
samples/05_animation/: CMakeLists.txt  main.cpp  scene.hpp
samples/assets/: Duck.glb
samples/config/: default.yaml
samples/im3d/: CMakeLists.txt  main.cpp  scene.hpp
samples/imgui/: CMakeLists.txt  main.cpp  scene.hpp
tests/: CMakeLists.txt  aabb_tree_test.cpp  entity_tree_test.cpp  headless_renderer_test.cpp  job_system_test.cpp  main.cpp  pool_test.cpp  texture_test.cpp
tests/assets/: test2.png.yaml  texture.yaml
tools/: PNG2KTX_README.md  README.md  asset_builder.cpp  asset_graph.cpp  asset_graph.hpp  asset_processor.hpp  filesys.hpp  geometry_processor.cpp  geometry_processor.hpp  png2ktx.cpp  shader_preprocessor.cpp  shader_processor.cpp  shader_processor.hpp  texture_processor.cpp  texture_processor.hpp  wgsl_preprocessor.cpp
tools/tests/: CMakeLists.txt  asset_graph_test.cpp
webgpu/: webgpu_metal.mm  webgpu_renderer.cpp  webgpu_renderer.hpp  webgpu_sprite.cpp  webgpu_sprite.hpp  webgpu_texture.cpp  webgpu_texture.hpp  webgpu_triangle.cpp  webgpu_triangle.hpp  webgpu_utils.cpp  webgpu_utils.hpp
webgpu/shaders/: animated_triangle.wgsl  common.wgsl  sprite.wgsl  triangle.wgsl  utils.wgsl
